<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAuto</string>
    <string name="action_settings"></string>
    <string name="hello_world">ასდასდ</string>
    <string name="year_f">წელი დან</string>
    <string name="year_t">წელი მდე</string>
    <string name="butt_negative">გაუქმება</string>
    <string name="butt_positive">დაყენება</string>
    <string name="price">ფასი</string>
    <string name="from">დან</string>
    <string name="to">მდე</string>
    <string name="hint1">დან</string>
    <string name="hint2">მდე</string>
    <string name="clearance">Customs</string>
    <string name="steer">მარჯვენა საჭე</string>
    <string name="button">ფილტრი</string>
    <string name="transmission_null">ტრანსმისია</string>
    <string name="fuel_null">საწვავის ტიპი</string>
    <string name="title_activity_filtered">FilteredActivity</string>
    <string name="title_activity_catalog_page">CatalogPageActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_car_insert">განცხადების დამატება</string>

    <!-- Menu Bar Strings -->
    <string name="menu_first">მთავარი</string>
    <string name="menu_main">მანქანების სია</string>
    <string name="menu_search">ძებნა</string>
    <string name="menu_catalog">კატალოგი</string>
    <string name="menu_about">ჩვენს შესახებ</string>
    <string name="menu_language">ენა</string>

    <!-- Language Strings -->
    <string name="dialog_lang_ge">ქართული</string>
    <string name="dialog_lang_en">English</string>
    <string name="dialog_lang_ru">Русский</string>
    <string name="shared_prefs">MyPrefs</string>

    <!-- SearchPageActivity Strings -->
    <string name="search_search_btn">ძებნა</string>
    <string name="search_cancel_btn_txt">X</string>
    <string name="search_carMarkAndModel">მწარმოებელი</string>
    <string name="search_carModel">მოდელი</string>
    <string name="search_carPrice">ფასი</string>
    <string name="search_carYear">წელი</string>
    <string name="search_carCategory">კატეგორია</string>
    <string name="search_carLocation">მდებარეობა</string>
    <string name="search_carTransmission">ტრანსმისია</string>
    <string name="search_carFuel">საწვავის ტიპი</string>
    <string name="search_carCustomsPassed">განბაჟებული</string>
    <string name="search_carWheel">მარჯვენა საჭე</string>
    <string name="search_carDays">განცხადებები</string>
    <string name="search_carDriveWheels">წამყვანი თვლები</string>
    <string name="search_carDoors">კარები</string>
    <string name="search_carEngine">ძრავი</string>
    <string name="search_carAbs">ABS</string>
    <string name="search_carCentralLock">ცენტრალური საკეტი</string>
    <string name="search_carEsd">ESD</string>
    <string name="search_carBoardComp">ბორტკომპიუტერი</string>
    <string name="search_carLeatherInt">ტყავის სალონი</string>
    <string name="search_carElWindows">ელ. შუშები</string>
    <string name="search_carAirbags">აირბეგი</string>
    <string name="search_carParkingControl">პარკინგკონტროლი</string>
    <string name="search_carAlumDisks">დისკები</string>
    <string name="search_carHatch">ლუქი</string>
    <string name="search_carChairWarming">სავარძლების გათბობა</string>
    <string name="search_carNavigSystem">ნავიგაცია</string>
    <string name="search_carColor">მანქანის ფერი</string>

    <!-- SearchPageActivity Dialog Strings -->
    <string name="search_dialog_btn_cancel">გაუქმება</string>
    <string name="search_dialog_btn_ok">OK</string>
    <string name="search_dialog_price_from">დან: </string>
    <string name="search_dialog_price_to">მდე: </string>
    <string name="search_dialog_price_cancel">Cancel</string>
    <string name="search_dialog_price_ok">OK</string>
    <string name="search_dialog_generic_spinners_from">დან: </string>
    <string name="search_dialog_generic_spinners_to">მდე: </string>
    <string name="search_dialog_year_cancel">Cancel</string>
    <string name="search_dialog_year_ok">OK</string>
    <string name="search_dialog_customs_and_wheel_yes">კი</string>
    <string name="search_dialog_customs_and_wheel_no">არა</string>

    <!-- SearchPageActivity SelectedValues Strings -->
    <string name="search_selectedValue_yes">კი</string>

    <!-- Login, Registration And Menu Strings -->
    <string name="menu_login">შესვლა</string>
    <string name="username_login">მომხმარებელი:</string>
    <string name="password_login">პაროლი:</string>
    <string name="login_dialog_title">ავტორიზაცია</string>
    <string name="login_success">თქვენ წარმატებით გაიარეთ ავტორიზაცია</string>
    <string name="login_fail">მომხმარებელი ან პაროლი არასწორია!</string>
    <string name="title_activity_master_page">MasterPageActivity</string>
    <string name="menu_logout">გამოსვლა</string>
    <string name="menu_register">რეგისტრაცია</string>
    <string name="menu_add_car">მანქანის დამატება</string>
    <string name="title_activity_register_page">RegisterPageActivity</string>
    <string name="username_register">მომხმარებელი*</string>
    <string name="pass_register">პაროლი*:</string>
    <string name="rpt_pass_register">გაიმეორეთ პაროლი*</string>
    <string name="name_register">სახელი</string>
    <string name="surname_register">გვარი</string>
    <string name="email_register">ელ-ფოსტა*</string>
    <string name="gender_prompt">სქესი*</string>
    <string name="birthyear_prompt">დაბადების წელი*</string>
    <string name="username_empty">გთხოვთ შეიყვანოთ მომხმარებელი</string>
    <string name="password_empty">გთხოვთ შეიყვანოთ პაროლი</string>
    <string name="email_empty">გთხოვთ შეიყვანოთ ელ-ფოსტა</string>
    <string name="gender_empty">გთხოვთ აირჩიოთ სქესი</string>
    <string name="birthyear_empty">გთხოვთ აირჩიოთ დაბადების წელი</string>
    <string name="passwords_fail">პაროლები არ ემთხვევა ერთმანეთს</string>
    <string name="username_exist">ასეთი მომხმარებელი უკვე არსებობს</string>
    <string name="registration_finish">რეგისტრაცია წარმატებით დასრულდა</string>

    <string-array name="gender_array">
        <item>მამრობითი</item>
        <item>მდედრობითი</item>
    </string-array>

    <string name="registration_btn_str">დარეგისტრირება</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- DetailActivity -->
    <string-array name="details">
        <item>@string/search_carMarkAndModel</item>
        <item>@string/search_carModel</item>
        <item>@string/search_carYear</item>
        <item>@string/search_carCategory</item>
        <item>@string/search_carFuel</item>
        <item>@string/search_carEngine</item>
        <item>@string/odometer</item>
        <item>@string/cylinder</item>
        <item>@string/search_carTransmission</item>
        <item>@string/search_carDriveWheels</item>
        <item>@string/search_carDoors</item>
        <item>@string/search_carWheel</item>
        <item>@string/search_carColor</item>
        <item>@string/search_carAirbags</item>
        <item>@string/search_carElWindows</item>
        <item>@string/aircond</item>
        <item>@string/climate</item>
        <item>@string/search_carLeatherInt</item>
        <item>@string/search_carAlumDisks</item>
        <item>@string/search_carNavigSystem</item>
        <item>@string/search_carCentralLock</item>
        <item>@string/search_carHatch</item>
        <item>@string/alarm</item>
        <item>@string/search_carBoardComp</item>
        <item>@string/hydraulics</item>
        <item>@string/search_carChairWarming</item>
        <item>@string/search_carParkingControl</item>
        <item>@string/turbo</item>
    </string-array>

    <string name="colon">:</string>
    <string name="odometer">გარბენი</string>
    <string name="cylinder">ცილინდრი</string>
    <string name="aircond">კონდიციონერი</string>
    <string name="climate">კლიმატკონტროლი</string>
    <string name="alarm">სიგნალიზაცია</string>
    <string name="hydraulics">ჰიდრავლიკა</string>
    <string name="turbo">ტურბო</string>

    <!-- Detail Activity image numbering -->
    <string name="next">შემდეგი</string>
    <string name="prev">წინა</string>
    <string name="title_activity_my_page">MyPageActivity</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    
     <!-- Edit Account Strings -->
    <string name="edit_account_str">ანგარიშის რედაქტირება</string>
    <string name="username_txt">მომხმარებელი: </string>
    <string name="name_txt">სახელი: </string>
    <string name="surname_txt">გვარი: </string>
    <string name="email_txt">ელ–ფოსტა: </string>
    <string name="gender_txt">სქესი: </string>
    <string name="birthyear_txt">დაბადების წელი: </string>
    <string name="phone_txt">ტელეფონის ნომერი: </string>
    <string name="location_txt">მდებარეობა: </string>
    <string name="save_btn">დამახსოვრება</string>
  

    <!-- Add Car Strings -->
    <string name="add_car_type">აირჩიეთ განცხადების ტიპი</string>
    <string name="adtype1">ავტომობილები (ვყიდი)</string>
    <string name="adtype2">სპეც. ტექნიკა (ვყიდი)</string>
    <string name="adtype3">მოტოტექნიკა (ვყიდი)</string>
    <string name="request_insert">შევიძენ</string>
    <string name="add_button">დამატება</string>
    <string name="issued_year">გამოშვების წელი</string>
    <string name="issued_month">გამოშვების თვე</string>
    <string-array name="mileage_type">
        <item>კმ.</item>
        <item>მილი</item>
    </string-array>

</resources>