<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_user"
        android:showAsAction="ifRoom|withText"
        android:visible="false"/>
    <item
        android:id="@+id/menu_login"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_login"/>
    <item
        android:id="@+id/menu_logout"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_logout"
        android:visible="false"/>
    <item
        android:id="@+id/menu_main"
        android:title="@string/menu_first"/>
    <item
        android:id="@+id/menu_carList"
        android:title="@string/menu_main"/>
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_catalog"
        android:title="@string/menu_catalog"/>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"/>

</menu>