<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search Page Under Construction" />

    <LinearLayout
        android:id="@+id/search_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_selector"
        android:gravity="center" >

        <Button
            android:id="@+id/search_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Search" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_button" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/search_carMark"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carModel"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carPrice"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carYear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carYear"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carCategory"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carLocation"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carTransmission"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carTransmission"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carFuel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carFuel"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carCustomsPassed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carCustomsPassed"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carWheel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carWheel"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carDays"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carDays"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carDriveWheels"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carDriveWheels"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/search_carDoors"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:gravity="left"
                android:padding="5dip"
                android:text="@string/search_carDoors"
                android:textStyle="bold" >
            </Button>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>