<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/dialog_customs_and_wheel_rdgroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RadioButton 
            android:id="@+id/dialog_customs_and_wheel_yes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_customs_and_wheel_yes"/>
        <RadioButton 
            android:id="@+id/dialog_customs_and_wheel_no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_dialog_customs_and_wheel_no"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_customs_and_wheel_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_dialog_btn_cancel" />

        <Button
            android:id="@+id/dialog_customs_and_wheel_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_dialog_btn_ok" />
    </LinearLayout>
    

</LinearLayout>
